fixed layout problem and overlaping in contact, minor styling in fielset

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -754,21 +754,38 @@ ul {
         }
 
         fieldset {
-            min-width: 0;
+            min-width: 300px;
             padding: 25px;
-            margin: 0;
-            border: 0;
+            margin-top: 55px;
             border: solid 1px;
             max-width: 550px;
+            text-align: left;
         }
-        legend {
-            float: left;
+        #contact-fieldset-tittle {
             width: 120px;
-            padding: 0;
-            margin-bottom: .5rem;
-            font-size: calc(1.275rem + .3vw);
-            line-height: inherit;
+            left:15px;
             position: relative;
-            bottom: 45px;
             background-color: #f4f1de;
+            display: block;
+            float:none;
         }
+        input{
+            display: block;
+            margin: 5px auto;
+        }
+        .contact-form-labels{
+            margin-bottom: 15px;
+            margin-left: 17px;
+            text-align: left;
+        }
+        #contact-heading{
+            margin-top: 45px;
+        }
+        #contact-col{
+            height: 600px;
+        }
+        @media (max-width:992px){
+        #contact-section{
+            height: 750px;
+        }
+    }
